--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "cross-env": "^7.0.3",
+    "bootstrap": "^4.6.0",
     "electron-is-dev": "^2.0.0",
+    "electron-version": "^2.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
@@ -43,15 +45,15 @@
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
+    "cross-env": "^7.0.3",
     "electron": "^12.0.2",
     "electron-builder": "^22.10.5",
     "wait-on": "^5.3.0"
   },
-
   "description": "Exath Front End Project",
   "author": "Jason Sianandar",
-  "build" :{
-        "appId": "com.exathfrontend"
+  "build": {
+    "appId": "com.exathfrontend"
   },
   "main": "public/electron.js",
   "homepage": "./"
