--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-native-circle-checkbox": "^0.1.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.32.11",
+    "sass-loader": "^11.0.1",
+    "save-dev": "0.0.1-security",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
