--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-native-circle-checkbox": "^0.1.6",
+    "react-popup": "^0.10.0",
+    "react-popup-alert": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "save-dev": "0.0.1-security",
