--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-popup-alert": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "save-dev": "0.0.1-security",
     "web-vitals": "^1.1.1"
   },
