fixed previous small changes

--- a/package.json
+++ b/package.json
@@ -60,7 +60,20 @@
   "description": "Exath Front End Project",
   "author": "Jason Sianandar",
   "build": {
-    "appId": "com.exathfrontend"
+    "appId": "com.exathfrontend",
+    "win": {
+      "icon": "../src/assets/icons/exath_logo.png"
+    },
+    "files": [
+      "./build/**/*",
+      "./dist/**/*",
+      "./node_modules/**/*",
+      "./public/**/*",      
+      "*.js"
+    ],
+    "directories": {
+      "buildResources": "public"
+    }
   },
   "main": "public/electron.js",
   "homepage": "."
