Revert "fixed previous small changes"
This reverts commit d6e328f9fdfe24aa6ddf7f5833485f41ef72e549.

--- a/package.json
+++ b/package.json
@@ -60,20 +60,7 @@
   "description": "Exath Front End Project",
   "author": "Jason Sianandar",
   "build": {
-    "appId": "com.exathfrontend",
-    "win": {
-      "icon": "../src/assets/icons/exath_logo.png"
-    },
-    "files": [
-      "./build/**/*",
-      "./dist/**/*",
-      "./node_modules/**/*",
-      "./public/**/*",      
-      "*.js"
-    ],
-    "directories": {
-      "buildResources": "public"
-    }
+    "appId": "com.exathfrontend"
   },
   "main": "public/electron.js",
   "homepage": "."
